parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON vars funcion principal
Rule 2     programa -> PROGRAMA ID SEMICOLON funcion principal
Rule 3     programa -> PROGRAMA ID SEMICOLON vars principal
Rule 4     programa -> PROGRAMA ID SEMICOLON principal
Rule 5     principal -> PRINCIPAL LPAREN RPAREN bloque
Rule 6     vars -> VAR vars_aux
Rule 7     vars_aux -> tipo_simple vars_aux1 SEMICOLON
Rule 8     vars_aux -> tipo_simple vars_aux1 SEMICOLON vars_aux
Rule 9     vars_aux1 -> vars_aux2
Rule 10    vars_aux1 -> vars_aux2 COMMA vars_aux1
Rule 11    vars_aux2 -> ID n_save_var
Rule 12    vars_aux2 -> ID LSQUARE CTE_I n_save_array RSQUARE
Rule 13    n_save_array -> <empty>
Rule 14    n_save_var -> <empty>
Rule 15    tipo_simple -> INT n_save_type
Rule 16    tipo_simple -> FLOAT n_save_type
Rule 17    tipo_simple -> CHAR n_save_type
Rule 18    n_save_type -> <empty>
Rule 19    empty -> <empty>
Rule 20    variable -> ID LSQUARE mult_exp RSQUARE
Rule 21    variable -> ID p_n_getVarVal
Rule 22    p_n_getVarVal -> <empty>
Rule 23    funcion -> FUNCION tipo_simple ID n_register_func LPAREN param RPAREN vars bloque
Rule 24    funcion -> FUNCION tipo_simple ID n_register_func LPAREN param RPAREN bloque
Rule 25    funcion -> FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN vars bloque
Rule 26    funcion -> FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN bloque
Rule 27    funcion -> FUNCION tipo_simple ID n_register_func LPAREN RPAREN vars bloque
Rule 28    funcion -> FUNCION tipo_simple ID n_register_func LPAREN RPAREN bloque
Rule 29    funcion -> FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN vars bloque
Rule 30    funcion -> FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN bloque
Rule 31    n_register_func -> <empty>
Rule 32    param -> tipo_simple param_aux1
Rule 33    param_aux1 -> ID save_param
Rule 34    param_aux1 -> ID save_param COMMA param
Rule 35    save_param -> <empty>
Rule 36    bloque -> LBRACKET mult_estatutos RBRACKET
Rule 37    bloque -> LBRACKET empty RBRACKET
Rule 38    mult_estatutos -> estatuto
Rule 39    mult_estatutos -> estatuto mult_estatutos
Rule 40    estatuto -> asigna SEMICOLON
Rule 41    estatuto -> llamada
Rule 42    estatuto -> lee
Rule 43    estatuto -> escribe
Rule 44    estatuto -> condicion
Rule 45    estatuto -> ciclo_w
Rule 46    estatuto -> retorno
Rule 47    estatuto -> ciclo_f
Rule 48    asigna -> mult_asigna
Rule 49    mult_asigna -> variable EQUAL n_Operador mult_exp n_asignQuad
Rule 50    mult_asigna -> variable EQUAL n_Operador mult_asigna n_asignQuad
Rule 51    n_asignQuad -> <empty>
Rule 52    llamada -> ID LPAREN mult_exp RPAREN
Rule 53    lee -> LEE LPAREN variable RPAREN
Rule 54    escribe -> ESCRIBE LPAREN mult_exp n_escribeExp RPAREN SEMICOLON
Rule 55    escribe -> ESCRIBE LPAREN mult_cte_s n_escribeExp RPAREN SEMICOLON
Rule 56    n_escribeExp -> <empty>
Rule 57    mult_cte_s -> CTE_S
Rule 58    mult_cte_s -> CTE_S COMMA mult_cte_s
Rule 59    mult_exp -> exp
Rule 60    mult_exp -> exp COMMA mult_exp
Rule 61    exp -> t_exp n_orQuad
Rule 62    exp -> t_exp n_orQuad OR n_Operador exp
Rule 63    n_orQuad -> <empty>
Rule 64    t_exp -> g_exp n_andQuad
Rule 65    t_exp -> g_exp n_andQuad AND n_Operador t_exp
Rule 66    n_andQuad -> <empty>
Rule 67    g_exp -> m_exp n_compareQuad
Rule 68    g_exp -> m_exp n_compareQuad LESSTHAN n_Operador g_exp
Rule 69    g_exp -> m_exp n_compareQuad LESSEQUAL n_Operador g_exp
Rule 70    g_exp -> m_exp n_compareQuad GREATERTHAN n_Operador g_exp
Rule 71    g_exp -> m_exp n_compareQuad GREATEREQUAL n_Operador g_exp
Rule 72    g_exp -> m_exp n_compareQuad SAME n_Operador g_exp
Rule 73    g_exp -> m_exp n_compareQuad NOEQUAL n_Operador g_exp
Rule 74    n_compareQuad -> <empty>
Rule 75    m_exp -> t n_sumQuad
Rule 76    m_exp -> t n_sumQuad PLUS n_Operador m_exp
Rule 77    m_exp -> t n_sumQuad MINUS n_Operador m_exp
Rule 78    n_sumQuad -> <empty>
Rule 79    t -> f n_multQuad
Rule 80    t -> f n_multQuad MULT n_Operador t
Rule 81    t -> f n_multQuad DIV n_Operador t
Rule 82    n_multQuad -> <empty>
Rule 83    n_Operador -> <empty>
Rule 84    f -> LPAREN n_FF mult_exp RPAREN n_FF
Rule 85    f -> n_tempTypeI CTE_I n_directPrint
Rule 86    f -> n_tempTypeF CTE_F n_directPrint
Rule 87    f -> n_tempTypeC CTE_C n_directPrint
Rule 88    f -> variable
Rule 89    f -> llamada
Rule 90    n_tempTypeI -> <empty>
Rule 91    n_tempTypeF -> <empty>
Rule 92    n_tempTypeC -> <empty>
Rule 93    n_directPrint -> <empty>
Rule 94    n_FF -> <empty>
Rule 95    condicion -> SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque n_endIfQuad
Rule 96    condicion -> SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque SINO p_n_sinoQuad bloque n_endIfQuad
Rule 97    n_ifQuad -> <empty>
Rule 98    n_endIfQuad -> <empty>
Rule 99    p_n_sinoQuad -> <empty>
Rule 100   ciclo_w -> MIENTRAS n_startCicle LPAREN mult_exp RPAREN n_evalExp HAZ bloque n_endWhile
Rule 101   n_startCicle -> <empty>
Rule 102   n_evalExp -> <empty>
Rule 103   n_endWhile -> <empty>
Rule 104   ciclo_f -> DESDE n_startCicle asigna HASTA mult_exp n_evalExp_for HACER bloque n_endFor
Rule 105   n_evalExp_for -> <empty>
Rule 106   n_endFor -> <empty>
Rule 107   retorno -> REGRESA mult_exp SEMICOLON

Terminals, with rules where they appear

AND                  : 65
CHAR                 : 17
COMMA                : 10 34 58 60
COMMENT              : 
CTE_C                : 87
CTE_F                : 86
CTE_I                : 12 85
CTE_S                : 57 58
DESDE                : 104
DIV                  : 81
ENTONCES             : 95 96
EQUAL                : 49 50
ESCRIBE              : 54 55
FLOAT                : 16
FUNCION              : 23 24 25 26 27 28 29 30
GREATEREQUAL         : 71
GREATERTHAN          : 70
HACER                : 104
HASTA                : 104
HAZ                  : 100
ID                   : 1 2 3 4 11 12 20 21 23 24 25 26 27 28 29 30 33 34 52
INT                  : 15
LBRACKET             : 36 37
LEE                  : 53
LESSEQUAL            : 69
LESSTHAN             : 68
LPAREN               : 5 23 24 25 26 27 28 29 30 52 53 54 55 84 95 96 100
LSQUARE              : 12 20
MIENTRAS             : 100
MINUS                : 77
MULT                 : 80
NOEQUAL              : 73
OR                   : 62
PLUS                 : 76
PRINCIPAL            : 5
PROGRAMA             : 1 2 3 4
RBRACKET             : 36 37
REGRESA              : 107
RPAREN               : 5 23 24 25 26 27 28 29 30 52 53 54 55 84 95 96 100
RSQUARE              : 12 20
SAME                 : 72
SEMICOLON            : 1 2 3 4 7 8 40 54 55 107
SI                   : 95 96
SINO                 : 96
VAR                  : 6
VOID                 : 25 26 29 30
error                : 

Nonterminals, with rules where they appear

asigna               : 40 104
bloque               : 5 23 24 25 26 27 28 29 30 95 96 96 100 104
ciclo_f              : 47
ciclo_w              : 45
condicion            : 44
empty                : 37
escribe              : 43
estatuto             : 38 39
exp                  : 59 60 62
f                    : 79 80 81
funcion              : 1 2
g_exp                : 64 65 68 69 70 71 72 73
lee                  : 42
llamada              : 41 89
m_exp                : 67 68 69 70 71 72 73 76 77
mult_asigna          : 48 50
mult_cte_s           : 55 58
mult_estatutos       : 36 39
mult_exp             : 20 49 52 54 60 84 95 96 100 104 107
n_FF                 : 84 84
n_Operador           : 49 50 62 65 68 69 70 71 72 73 76 77 80 81
n_andQuad            : 64 65
n_asignQuad          : 49 50
n_compareQuad        : 67 68 69 70 71 72 73
n_directPrint        : 85 86 87
n_endFor             : 104
n_endIfQuad          : 95 96
n_endWhile           : 100
n_escribeExp         : 54 55
n_evalExp            : 100
n_evalExp_for        : 104
n_ifQuad             : 95 96
n_multQuad           : 79 80 81
n_orQuad             : 61 62
n_register_func      : 23 24 25 26 27 28 29 30
n_save_array         : 12
n_save_type          : 15 16 17 25 26 29 30
n_save_var           : 11
n_startCicle         : 100 104
n_sumQuad            : 75 76 77
n_tempTypeC          : 87
n_tempTypeF          : 86
n_tempTypeI          : 85
p_n_getVarVal        : 21
p_n_sinoQuad         : 96
param                : 23 24 25 26 34
param_aux1           : 32
principal            : 1 2 3 4
programa             : 0
retorno              : 46
save_param           : 33 34
t                    : 75 76 77 80 81
t_exp                : 61 62 65
tipo_simple          : 7 8 23 24 27 28 32
variable             : 49 50 53 88
vars                 : 1 3 23 25 27 29
vars_aux             : 6 8
vars_aux1            : 7 8 10
vars_aux2            : 9 10

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON vars funcion principal
    (2) programa -> . PROGRAMA ID SEMICOLON funcion principal
    (3) programa -> . PROGRAMA ID SEMICOLON vars principal
    (4) programa -> . PROGRAMA ID SEMICOLON principal

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON vars funcion principal
    (2) programa -> PROGRAMA . ID SEMICOLON funcion principal
    (3) programa -> PROGRAMA . ID SEMICOLON vars principal
    (4) programa -> PROGRAMA . ID SEMICOLON principal

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON vars funcion principal
    (2) programa -> PROGRAMA ID . SEMICOLON funcion principal
    (3) programa -> PROGRAMA ID . SEMICOLON vars principal
    (4) programa -> PROGRAMA ID . SEMICOLON principal

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . vars funcion principal
    (2) programa -> PROGRAMA ID SEMICOLON . funcion principal
    (3) programa -> PROGRAMA ID SEMICOLON . vars principal
    (4) programa -> PROGRAMA ID SEMICOLON . principal
    (6) vars -> . VAR vars_aux
    (23) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN param RPAREN vars bloque
    (24) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN param RPAREN bloque
    (25) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN bloque
    (27) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN RPAREN vars bloque
    (28) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN RPAREN bloque
    (29) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN bloque
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    VAR             shift and go to state 8
    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    vars                           shift and go to state 5
    funcion                        shift and go to state 6
    principal                      shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID SEMICOLON vars . funcion principal
    (3) programa -> PROGRAMA ID SEMICOLON vars . principal
    (23) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN param RPAREN vars bloque
    (24) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN param RPAREN bloque
    (25) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN param RPAREN bloque
    (27) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN RPAREN vars bloque
    (28) funcion -> . FUNCION tipo_simple ID n_register_func LPAREN RPAREN bloque
    (29) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> . FUNCION VOID n_save_type ID n_register_func LPAREN RPAREN bloque
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    FUNCION         shift and go to state 9
    PRINCIPAL       shift and go to state 10

    funcion                        shift and go to state 11
    principal                      shift and go to state 12

state 6

    (2) programa -> PROGRAMA ID SEMICOLON funcion . principal
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 10

    principal                      shift and go to state 13

state 7

    (4) programa -> PROGRAMA ID SEMICOLON principal .

    $end            reduce using rule 4 (programa -> PROGRAMA ID SEMICOLON principal .)


state 8

    (6) vars -> VAR . vars_aux
    (7) vars_aux -> . tipo_simple vars_aux1 SEMICOLON
    (8) vars_aux -> . tipo_simple vars_aux1 SEMICOLON vars_aux
    (15) tipo_simple -> . INT n_save_type
    (16) tipo_simple -> . FLOAT n_save_type
    (17) tipo_simple -> . CHAR n_save_type

    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    vars_aux                       shift and go to state 14
    tipo_simple                    shift and go to state 15

state 9

    (23) funcion -> FUNCION . tipo_simple ID n_register_func LPAREN param RPAREN vars bloque
    (24) funcion -> FUNCION . tipo_simple ID n_register_func LPAREN param RPAREN bloque
    (25) funcion -> FUNCION . VOID n_save_type ID n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> FUNCION . VOID n_save_type ID n_register_func LPAREN param RPAREN bloque
    (27) funcion -> FUNCION . tipo_simple ID n_register_func LPAREN RPAREN vars bloque
    (28) funcion -> FUNCION . tipo_simple ID n_register_func LPAREN RPAREN bloque
    (29) funcion -> FUNCION . VOID n_save_type ID n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> FUNCION . VOID n_save_type ID n_register_func LPAREN RPAREN bloque
    (15) tipo_simple -> . INT n_save_type
    (16) tipo_simple -> . FLOAT n_save_type
    (17) tipo_simple -> . CHAR n_save_type

    VOID            shift and go to state 20
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo_simple                    shift and go to state 19

state 10

    (5) principal -> PRINCIPAL . LPAREN RPAREN bloque

    LPAREN          shift and go to state 21


state 11

    (1) programa -> PROGRAMA ID SEMICOLON vars funcion . principal
    (5) principal -> . PRINCIPAL LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 10

    principal                      shift and go to state 22

state 12

    (3) programa -> PROGRAMA ID SEMICOLON vars principal .

    $end            reduce using rule 3 (programa -> PROGRAMA ID SEMICOLON vars principal .)


state 13

    (2) programa -> PROGRAMA ID SEMICOLON funcion principal .

    $end            reduce using rule 2 (programa -> PROGRAMA ID SEMICOLON funcion principal .)


state 14

    (6) vars -> VAR vars_aux .

    FUNCION         reduce using rule 6 (vars -> VAR vars_aux .)
    PRINCIPAL       reduce using rule 6 (vars -> VAR vars_aux .)
    LBRACKET        reduce using rule 6 (vars -> VAR vars_aux .)


state 15

    (7) vars_aux -> tipo_simple . vars_aux1 SEMICOLON
    (8) vars_aux -> tipo_simple . vars_aux1 SEMICOLON vars_aux
    (9) vars_aux1 -> . vars_aux2
    (10) vars_aux1 -> . vars_aux2 COMMA vars_aux1
    (11) vars_aux2 -> . ID n_save_var
    (12) vars_aux2 -> . ID LSQUARE CTE_I n_save_array RSQUARE

    ID              shift and go to state 25

    vars_aux1                      shift and go to state 23
    vars_aux2                      shift and go to state 24

state 16

    (15) tipo_simple -> INT . n_save_type
    (18) n_save_type -> .

    ID              reduce using rule 18 (n_save_type -> .)

    n_save_type                    shift and go to state 26

state 17

    (16) tipo_simple -> FLOAT . n_save_type
    (18) n_save_type -> .

    ID              reduce using rule 18 (n_save_type -> .)

    n_save_type                    shift and go to state 27

state 18

    (17) tipo_simple -> CHAR . n_save_type
    (18) n_save_type -> .

    ID              reduce using rule 18 (n_save_type -> .)

    n_save_type                    shift and go to state 28

state 19

    (23) funcion -> FUNCION tipo_simple . ID n_register_func LPAREN param RPAREN vars bloque
    (24) funcion -> FUNCION tipo_simple . ID n_register_func LPAREN param RPAREN bloque
    (27) funcion -> FUNCION tipo_simple . ID n_register_func LPAREN RPAREN vars bloque
    (28) funcion -> FUNCION tipo_simple . ID n_register_func LPAREN RPAREN bloque

    ID              shift and go to state 29


state 20

    (25) funcion -> FUNCION VOID . n_save_type ID n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> FUNCION VOID . n_save_type ID n_register_func LPAREN param RPAREN bloque
    (29) funcion -> FUNCION VOID . n_save_type ID n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> FUNCION VOID . n_save_type ID n_register_func LPAREN RPAREN bloque
    (18) n_save_type -> .

    ID              reduce using rule 18 (n_save_type -> .)

    n_save_type                    shift and go to state 30

state 21

    (5) principal -> PRINCIPAL LPAREN . RPAREN bloque

    RPAREN          shift and go to state 31


state 22

    (1) programa -> PROGRAMA ID SEMICOLON vars funcion principal .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON vars funcion principal .)


state 23

    (7) vars_aux -> tipo_simple vars_aux1 . SEMICOLON
    (8) vars_aux -> tipo_simple vars_aux1 . SEMICOLON vars_aux

    SEMICOLON       shift and go to state 32


state 24

    (9) vars_aux1 -> vars_aux2 .
    (10) vars_aux1 -> vars_aux2 . COMMA vars_aux1

    SEMICOLON       reduce using rule 9 (vars_aux1 -> vars_aux2 .)
    COMMA           shift and go to state 33


state 25

    (11) vars_aux2 -> ID . n_save_var
    (12) vars_aux2 -> ID . LSQUARE CTE_I n_save_array RSQUARE
    (14) n_save_var -> .

    LSQUARE         shift and go to state 35
    COMMA           reduce using rule 14 (n_save_var -> .)
    SEMICOLON       reduce using rule 14 (n_save_var -> .)

    n_save_var                     shift and go to state 34

state 26

    (15) tipo_simple -> INT n_save_type .

    ID              reduce using rule 15 (tipo_simple -> INT n_save_type .)


state 27

    (16) tipo_simple -> FLOAT n_save_type .

    ID              reduce using rule 16 (tipo_simple -> FLOAT n_save_type .)


state 28

    (17) tipo_simple -> CHAR n_save_type .

    ID              reduce using rule 17 (tipo_simple -> CHAR n_save_type .)


state 29

    (23) funcion -> FUNCION tipo_simple ID . n_register_func LPAREN param RPAREN vars bloque
    (24) funcion -> FUNCION tipo_simple ID . n_register_func LPAREN param RPAREN bloque
    (27) funcion -> FUNCION tipo_simple ID . n_register_func LPAREN RPAREN vars bloque
    (28) funcion -> FUNCION tipo_simple ID . n_register_func LPAREN RPAREN bloque
    (31) n_register_func -> .

    LPAREN          reduce using rule 31 (n_register_func -> .)

    n_register_func                shift and go to state 36

state 30

    (25) funcion -> FUNCION VOID n_save_type . ID n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> FUNCION VOID n_save_type . ID n_register_func LPAREN param RPAREN bloque
    (29) funcion -> FUNCION VOID n_save_type . ID n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> FUNCION VOID n_save_type . ID n_register_func LPAREN RPAREN bloque

    ID              shift and go to state 37


state 31

    (5) principal -> PRINCIPAL LPAREN RPAREN . bloque
    (36) bloque -> . LBRACKET mult_estatutos RBRACKET
    (37) bloque -> . LBRACKET empty RBRACKET

    LBRACKET        shift and go to state 39

    bloque                         shift and go to state 38

state 32

    (7) vars_aux -> tipo_simple vars_aux1 SEMICOLON .
    (8) vars_aux -> tipo_simple vars_aux1 SEMICOLON . vars_aux
    (7) vars_aux -> . tipo_simple vars_aux1 SEMICOLON
    (8) vars_aux -> . tipo_simple vars_aux1 SEMICOLON vars_aux
    (15) tipo_simple -> . INT n_save_type
    (16) tipo_simple -> . FLOAT n_save_type
    (17) tipo_simple -> . CHAR n_save_type

    FUNCION         reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 SEMICOLON .)
    PRINCIPAL       reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 SEMICOLON .)
    LBRACKET        reduce using rule 7 (vars_aux -> tipo_simple vars_aux1 SEMICOLON .)
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo_simple                    shift and go to state 15
    vars_aux                       shift and go to state 40

state 33

    (10) vars_aux1 -> vars_aux2 COMMA . vars_aux1
    (9) vars_aux1 -> . vars_aux2
    (10) vars_aux1 -> . vars_aux2 COMMA vars_aux1
    (11) vars_aux2 -> . ID n_save_var
    (12) vars_aux2 -> . ID LSQUARE CTE_I n_save_array RSQUARE

    ID              shift and go to state 25

    vars_aux2                      shift and go to state 24
    vars_aux1                      shift and go to state 41

state 34

    (11) vars_aux2 -> ID n_save_var .

    COMMA           reduce using rule 11 (vars_aux2 -> ID n_save_var .)
    SEMICOLON       reduce using rule 11 (vars_aux2 -> ID n_save_var .)


state 35

    (12) vars_aux2 -> ID LSQUARE . CTE_I n_save_array RSQUARE

    CTE_I           shift and go to state 42


state 36

    (23) funcion -> FUNCION tipo_simple ID n_register_func . LPAREN param RPAREN vars bloque
    (24) funcion -> FUNCION tipo_simple ID n_register_func . LPAREN param RPAREN bloque
    (27) funcion -> FUNCION tipo_simple ID n_register_func . LPAREN RPAREN vars bloque
    (28) funcion -> FUNCION tipo_simple ID n_register_func . LPAREN RPAREN bloque

    LPAREN          shift and go to state 43


state 37

    (25) funcion -> FUNCION VOID n_save_type ID . n_register_func LPAREN param RPAREN vars bloque
    (26) funcion -> FUNCION VOID n_save_type ID . n_register_func LPAREN param RPAREN bloque
    (29) funcion -> FUNCION VOID n_save_type ID . n_register_func LPAREN RPAREN vars bloque
    (30) funcion -> FUNCION VOID n_save_type ID . n_register_func LPAREN RPAREN bloque
    (31) n_register_func -> .

    LPAREN          reduce using rule 31 (n_register_func -> .)

    n_register_func                shift and go to state 44

state 38

    (5) principal -> PRINCIPAL LPAREN RPAREN bloque .

    $end            reduce using rule 5 (principal -> PRINCIPAL LPAREN RPAREN bloque .)


state 39

    (36) bloque -> LBRACKET . mult_estatutos RBRACKET
    (37) bloque -> LBRACKET . empty RBRACKET
    (38) mult_estatutos -> . estatuto
    (39) mult_estatutos -> . estatuto mult_estatutos
    (19) empty -> .
    (40) estatuto -> . asigna SEMICOLON
    (41) estatuto -> . llamada
    (42) estatuto -> . lee
    (43) estatuto -> . escribe
    (44) estatuto -> . condicion
    (45) estatuto -> . ciclo_w
    (46) estatuto -> . retorno
    (47) estatuto -> . ciclo_f
    (48) asigna -> . mult_asigna
    (52) llamada -> . ID LPAREN mult_exp RPAREN
    (53) lee -> . LEE LPAREN variable RPAREN
    (54) escribe -> . ESCRIBE LPAREN mult_exp n_escribeExp RPAREN SEMICOLON
    (55) escribe -> . ESCRIBE LPAREN mult_cte_s n_escribeExp RPAREN SEMICOLON
    (95) condicion -> . SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque n_endIfQuad
    (96) condicion -> . SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque SINO p_n_sinoQuad bloque n_endIfQuad
    (100) ciclo_w -> . MIENTRAS n_startCicle LPAREN mult_exp RPAREN n_evalExp HAZ bloque n_endWhile
    (107) retorno -> . REGRESA mult_exp SEMICOLON
    (104) ciclo_f -> . DESDE n_startCicle asigna HASTA mult_exp n_evalExp_for HACER bloque n_endFor
    (49) mult_asigna -> . variable EQUAL n_Operador mult_exp n_asignQuad
    (50) mult_asigna -> . variable EQUAL n_Operador mult_asigna n_asignQuad
    (20) variable -> . ID LSQUARE mult_exp RSQUARE
    (21) variable -> . ID p_n_getVarVal

    RBRACKET        reduce using rule 19 (empty -> .)
    ID              shift and go to state 57
    LEE             shift and go to state 58
    ESCRIBE         shift and go to state 60
    SI              shift and go to state 61
    MIENTRAS        shift and go to state 62
    REGRESA         shift and go to state 63
    DESDE           shift and go to state 64

    mult_estatutos                 shift and go to state 45
    empty                          shift and go to state 46
    estatuto                       shift and go to state 47
    asigna                         shift and go to state 48
    llamada                        shift and go to state 49
    lee                            shift and go to state 50
    escribe                        shift and go to state 51
    condicion                      shift and go to state 52
    ciclo_w                        shift and go to state 53
    retorno                        shift and go to state 54
    ciclo_f                        shift and go to state 55
    mult_asigna                    shift and go to state 56
    variable                       shift and go to state 59

state 40

    (8) vars_aux -> tipo_simple vars_aux1 SEMICOLON vars_aux .

    FUNCION         reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 SEMICOLON vars_aux .)
    PRINCIPAL       reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 SEMICOLON vars_aux .)
    LBRACKET        reduce using rule 8 (vars_aux -> tipo_simple vars_aux1 SEMICOLON vars_aux .)


state 41

    (10) vars_aux1 -> vars_aux2 COMMA vars_aux1 .

    SEMICOLON       reduce using rule 10 (vars_aux1 -> vars_aux2 COMMA vars_aux1 .)


state 42

    (12) vars_aux2 -> ID LSQUARE CTE_I . n_save_array RSQUARE
    (13) n_save_array -> .

    RSQUARE         reduce using rule 13 (n_save_array -> .)

    n_save_array                   shift and go to state 65

state 43

    (23) funcion -> FUNCION tipo_simple ID n_register_func LPAREN . param RPAREN vars bloque
    (24) funcion -> FUNCION tipo_simple ID n_register_func LPAREN . param RPAREN bloque
    (27) funcion -> FUNCION tipo_simple ID n_register_func LPAREN . RPAREN vars bloque
    (28) funcion -> FUNCION tipo_simple ID n_register_func LPAREN . RPAREN bloque
    (32) param -> . tipo_simple param_aux1
    (15) tipo_simple -> . INT n_save_type
    (16) tipo_simple -> . FLOAT n_save_type
    (17) tipo_simple -> . CHAR n_save_type

    RPAREN          shift and go to state 68
    INT             shift and go to state 16
    FLOAT           shift and go to state 17
    CHAR            shift and go to state 18

    tipo_simple                    shift and go to state 66
    param                          shift and go to state 67

state 44

    (25) funcion -> FUNCION VOID n_save_type ID n_register_func . LPAREN param RPAREN vars bloque
    (26) funcion -> FUNCION VOID n_save_type ID n_register_func . LPAREN param RPAREN bloque
    (29) funcion -> FUNCION VOID n_save_type ID n_register_func . LPAREN RPAREN vars bloque
    (30) funcion -> FUNCION VOID n_save_type ID n_register_func . LPAREN RPAREN bloque

    LPAREN          shift and go to state 69


state 45

    (36) bloque -> LBRACKET mult_estatutos . RBRACKET

    RBRACKET        shift and go to state 70


state 46

    (37) bloque -> LBRACKET empty . RBRACKET

    RBRACKET        shift and go to state 71


state 47

    (38) mult_estatutos -> estatuto .
    (39) mult_estatutos -> estatuto . mult_estatutos
    (38) mult_estatutos -> . estatuto
    (39) mult_estatutos -> . estatuto mult_estatutos
    (40) estatuto -> . asigna SEMICOLON
    (41) estatuto -> . llamada
    (42) estatuto -> . lee
    (43) estatuto -> . escribe
    (44) estatuto -> . condicion
    (45) estatuto -> . ciclo_w
    (46) estatuto -> . retorno
    (47) estatuto -> . ciclo_f
    (48) asigna -> . mult_asigna
    (52) llamada -> . ID LPAREN mult_exp RPAREN
    (53) lee -> . LEE LPAREN variable RPAREN
    (54) escribe -> . ESCRIBE LPAREN mult_exp n_escribeExp RPAREN SEMICOLON
    (55) escribe -> . ESCRIBE LPAREN mult_cte_s n_escribeExp RPAREN SEMICOLON
    (95) condicion -> . SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque n_endIfQuad
    (96) condicion -> . SI LPAREN mult_exp RPAREN n_ifQuad ENTONCES bloque SINO p_n_sinoQuad bloque n_endIfQuad
    (100) ciclo_w -> . MIENTRAS n_startCicle LPAREN mult_exp RPAREN n_evalExp HAZ bloque n_endWhile
    (107) retorno -> . REGRESA mult_exp SEMICOLON
    (104) ciclo_f -> . DESDE n_startCicle asigna HASTA mult_exp n_evalExp_for HACER bloque n_endFor
    (49) mult_asigna -> . variable EQUAL n_Operador mult_exp n_asignQuad
    (50) mult_asigna -> . variable EQUAL n_Operador mult_asigna n_asignQuad
    (20) variable -> . ID LSQUARE mult_exp RSQUARE
    (21) variable -> . ID p_n_getVarVal

    RBRACKET        reduce using rule 38 (mult_estatutos -> estatuto .)
    ID              shift and go to state 57
    LEE             shift and go to state 58
    ESCRIBE         shift and go to state 60
    SI              shift and go to state 61
    MIENTRAS        shift and go to state 62
    REGRESA         shift and go to state 63
    DESDE           shift and go to state 64

    estatuto                       shift and go to state 47
    mult_estatutos                 shift and go to state 72
    asigna                         shift and go to state 48
    llamada                        shift and go to state 49
    lee                            shift and go to state 50
    escribe                        shift and go to state 51
    condicion                      shift and go to state 52
    ciclo_w                        shift and go to state 53
    retorno                        shift and go to state 54
    ciclo_f                        shift and go to state 55
    mult_asigna                    shift and go to state 56
    variable                       shift and go to state 59

state 48

    (40) estatuto -> asigna . SEMICOLON

    SEMICOLON       shift and go to state 73


state 49

    (41) estatuto -> llamada .

    ID              reduce using rule 41 (estatuto -> llamada .)
    LEE             reduce using rule 41 (estatuto -> llamada .)
    ESCRIBE         reduce using rule 41 (estatuto -> llamada .)
    SI              reduce using rule 41 (estatuto -> llamada .)
    MIENTRAS        reduce using rule 41 (estatuto -> llamada .)
    REGRESA         reduce using rule 41 (estatuto -> llamada .)
    DESDE           reduce using rule 41 (estatuto -> llamada .)
    RBRACKET        reduce using rule 41 (estatuto -> llamada .)


state 50

    (42) estatuto -> lee .
